hermes_fuzz_executed_few_shot_v3/fuzz_26_execution
'use strict';
<fim_middle>const obj = {a: 4, b: 'world'};
function f(a, b) {
  console.log(a);
  console.log(b);
  return new Promise(x => x({a, b}));
}
f().then(console.log.bind(console));*/


Execution Output ------------------:
test.js:2:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>const obj = {a: 4, b: 'world'};
^
